--- a/CAREERS/templates/job_expired.html
+++ b/CAREERS/templates/job_expired.html
@@ -1,7 +1,5 @@
 <!-- 🪷 This project was developed by Ben (@InactiveBen) on Twitter and Discord. -->
 <!-- It is open-source on GitHub, and you're welcome to explore, use, or contribute to it: https://github.com/ReadyForBen/Minsun/tree/main -->
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -67,12 +65,16 @@
             color: #ddd;
             margin-bottom: 13px;
         }
+        .highlight {
+            color: #fa4463;
+            font-weight: 600;
+        }
     </style>
 </head>
 <body>
     <div class="content">
         <img src="https://i.imgur.com/BptG9Km.png" alt="Thumbnail Image">
-        <h1>Oops,</h1>
+        <p>Thank you for your interest in <span class="highlight">Minsun</span>. Unfortunately, <span class="highlight">this job listing has expired</span>, and we are no longer accepting new applications.</p>
         <p>The application deadline for this job has now passed.</p>
     </div>
 </body>
