--- a/CAREERS/templates/Service_Error.html
+++ b/CAREERS/templates/Service_Error.html
@@ -75,8 +75,10 @@
 <body>
     <div class="content">
         <img src="https://i.imgur.com/BptG9Km.png" alt="Thumbnail Image">
-        <p>Thank you for your interest in <span class="highlight">Minsun</span>. Unfortunately, <span class="highlight">this job listing has expired</span>, and we are no longer accepting new applications.</p>
-        <p>The application deadline for this job has now passed.</p>
+       <p>Thank you for your interest in <span class="highlight">Minsun</span>. Unfortunately, <span class="highlight">we encountered an issue</span> while processing your request.</p>
+<p>Please contact <span class="highlight">InactiveBen</span> for further assistance.</p>
+<p style="font-size: small; color: #666;">INTERNALID: 01J5T1CVCZDB8WY792MY7PMB5S</p>
+
     </div>
 </body>
 </html>
